# app-auto-test

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DESKTOP_WEB_APP_EXECUTION.md  FLASK_API.md  README.md  REMOTE_WS_CONTROL_EXAMPLES.md  build_web_ui.bat  build_web_ui.sh  conftest.py  desktop_web_app.py  pyproject.toml  pytest.ini  report_generator.py  requirements.txt  run_tests_and_allure.ps1  start_desktop_ui.ps1  start_dev_all.ps1  start_dev_all.sh  stop_dev_all.ps1  stop_dev_all.sh
.codex/: appium.capabilities.json  config.toml
desktop_app/: __init__.py  airtest_service.py  api.py  app_factory.py  db_service.py  device_service.py  package_service.py  remote_ws_service.py  report_service.py  services_container.py  task_service.py
docs/: 项目方案设计文档.md
scripts/: run_airtest.py
tests/: __init__.py
tests/common/: __init__.py  android_input.py  base_page.py  mobile_platform.py  models.py  reporting.py
tests/lysora/: data.py  test_lysora_demo_experience.py  test_lysora_home_logo.py  test_lysora_login_my_tab.py  test_lysora_toolkit_ping.py
tests/lysora/flows/: __init__.py  demo_experience_flow.py  login_flow.py  toolkit_ping_flow.py
tests/lysora/pages/: __init__.py  demo_experience_page.py  home_page.py  login_page.py  my_page.py  ping_page.py  toolkit_page.py
tests/lysora/pages/android/: __init__.py  demo_experience_page.py  home_page.py  login_page.py  my_page.py  ping_page.py  toolkit_page.py
tests/lysora/pages/ios/: __init__.py  _base.py  demo_experience_page.py  home_page.py  login_page.py  my_page.py  ping_page.py  toolkit_page.py
tests/reyee/: data.py  test_reyee_login_my_tab.py  test_reyee_virtual_project_lifecycle.py
tests/reyee/flows/: login_flow.py  project_flow.py
tests/reyee/pages/: login_page.py  my_page.py  platform_factory.py  project_page.py
tests/reyee/pages/android/: login_page.py  my_page.py  project_page.py
tests/reyee/pages/ios/: _base.py  login_page.py  my_page.py  project_page.py
tests/ruijieCloud/: data.py  test_ruijieCloud_login_cycle.py
tests/ruijieCloud/flows/: __init__.py  login_flow.py
tests/ruijieCloud/pages/: __init__.py  login_page.py  my_page.py
tests/ruijieCloud/pages/android/: __init__.py  login_page.py  my_page.py
tests/ruijieCloud/pages/ios/: __init__.py  _base.py  login_page.py  my_page.py
tests/templates/: README.md  __init__.py  example_mobile_case.py  lysora_data_template.py  lysora_flow_template.py  lysora_page_template.py  lysora_test_template.py
web-ui/: index.html  package-lock.json  package.json  vite.config.ts
web-ui/src/: App.tsx  main.tsx  styles.css
web-ui/src/components/: DeviceSummaryCards.tsx  DevicesTab.tsx  ReportTab.tsx  ResultsTab.tsx  RunnerTab.tsx  StartupAlert.tsx  TaskQueueCard.tsx
web-ui/src/hooks/: useExecutionQueue.ts  useReportActions.ts  useReportState.ts  useResultsActions.ts  useRunnerSetup.ts  useTaskActions.ts  useTaskMonitor.ts
web-ui/src/lib/: api.ts  appHelpers.tsx  appViewConfig.tsx
web-ui/src/types/: app.ts
