[project]
name = "app-auto-test"
version = "0.1.0"
description = "Mobile automation test runner with Flask desktop web UI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask",
    "waitress",
    "websocket-client",
    "typing_extensions>=4.15.0",
    "certifi>=2026.1.4",
    "urllib3[socks]>=2.6.3,<3.0",
]

[tool.uv]
default-groups = []

[tool.pylint.main]
ignore-paths = [
    "^\\.venv/.*",
    "^\\.uv-cache/.*",
    "^build/.*",
    "^dist/.*",
    "^ui/.*",
    "^reports/.*",
]

[tool.pylint.format]
max-line-length = 200

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "broad-exception-caught",
    "redefined-outer-name",
    "unused-argument",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "too-many-statements",
    "too-many-branches",
    "too-many-return-statements",
    "too-many-instance-attributes",
    "too-many-public-methods",
    "too-few-public-methods",
    "duplicate-code",
    "invalid-name",
    "import-outside-toplevel",
    "mixed-line-endings",
    "trailing-newlines",
    "subprocess-run-check",
    "consider-using-with",
    "no-member",
    "abstract-method",
]
